--- a/plugin.properties
+++ b/plugin.properties
@@ -23,42 +23,14 @@
 
 name = eFaps Eclipse Plugin
 
-plugin.command.connect                                                          = Connect
-plugin.command.update                                                           = Update
-plugin.command.reloadCache                                                      = Reload Cache
 plugin.console                                                                  = eFaps Console
-plugin.toolbar.updateCommand.Label                                              = Update
-plugin.toolbar.updateCommand.Tooltip                                            = Update current
 
 plugin.popup.menu = eFaps
 plugin.popup.action.restPost = send to Rest Server
 plugin.popup.action.copyCI = copy Configuration Item
 plugin.command.restCompile = Compile via Rest
 
-org.efaps.eclipse.EfapsPlugin.connect.logInit                                   = Initialize eFaps Database Connection
-org.efaps.eclipse.EfapsPlugin.connect.logDatabaseType                           = - using database ''{0}''
-org.efaps.eclipse.EfapsPlugin.connect.logFactory                                = - using factory ''{0}''
-org.efaps.eclipse.EfapsPlugin.connect.logInitialized                            = Initialized
-org.efaps.eclipse.EfapsPlugin.connect.logException                              = Exception ''{0}'' occurred. Initialize of Database failed. Complete stack trace is:
-org.efaps.eclipse.EfapsPlugin.reloadCache.logStart                              = Start Reload Cache
-org.efaps.eclipse.EfapsPlugin.reloadCache.logFailed                             = Reload Cache Failed!
-org.efaps.eclipse.EfapsPlugin.reloadCache.logException                          = Exception ''{0}'' was thrown and reload Cache failed! Complete stack trace is:
-org.efaps.eclipse.EfapsPlugin.reloadCache.logEnded                              = End Reload Cache
-org.efaps.eclipse.EfapsPlugin.startTransaction.logNoUser                        = No eFaps user defined! Please set the eFaps user within eFaps settings!
-org.efaps.eclipse.EfapsPlugin.update.logStart                                   = Start Update of ''{0}''
-org.efaps.eclipse.EfapsPlugin.update.logException                               = Exception ''{0}'' occurred. Update filed. Complete stack trace is:
-org.efaps.eclipse.EfapsPlugin.update.logEnd                                     = End Update of ''{0}''
-
-org.efaps.eclipse.handlers.ConnectHandler.execute.connected                     = Connected to eFaps database.
-org.efaps.eclipse.handlers.ConnectHandler.execute.failed                        = Connect to eFaps database failed.
-org.efaps.eclipse.handlers.ReloadCacheHandler.execute.failed                    = Reload Cache failed!
-org.efaps.eclipse.handlers.ReloadCacheHandler.execute.notInitialized            = The connection to the eFaps database is not initialized!
-org.efaps.eclipse.handlers.UpdateHandler.execute.failed                         = Update failed!
-org.efaps.eclipse.handlers.UpdateHandler.execute.notInitialized                 = The connection to the eFaps database is not initialized!
-
-org.efaps.eclipse.rest.RestClient.init = Initialize Rest Client
-org.efaps.eclipse.rest.RestClient.init.response =  - Response: {0}
 org.efaps.eclipse.rest.RestClient.compile = Sending Compile Request with target ''{0}''
-org.efaps.eclipse.rest.RestClient.compile.response =  - Response: {0}
+org.efaps.eclipse.rest.RestClient.compile.response =  - Response - Family: ''{0}'', Code: ''{1}'', Reason: {2}
 org.efaps.eclipse.rest.RestClient.post = Sending Post with files ''{0}''
-org.efaps.eclipse.rest.RestClient.post.response = - Response: {0}
+org.efaps.eclipse.rest.RestClient.post.response = - Response - Family: ''{0}'', Code: ''{1}'', Reason: {2}
