--- a/build.properties
+++ b/build.properties
@@ -45,28 +45,27 @@ bin.includes = META-INF/,\
                icons/userinterface/Admin_UI_TableImage.gif,\
                icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
                lib/activation-1.1.jar,\
-               lib/aopalliance-repackaged-2.2.0.jar,\
+               lib/aopalliance-repackaged-2.4.0-b10.jar,\
                lib/commons-io-1.3.2.jar,\
-               lib/hk2-api-2.2.0.jar,\
-               lib/hk2-locator-2.2.0.jar,\
-               lib/hk2-utils-2.2.0.jar,\
+               lib/hk2-api-2.4.0-b10.jar,\
+               lib/hk2-locator-2.4.0-b10.jar,\
+               lib/hk2-utils-2.4.0-b10.jar,\
                lib/javassist-3.18.1-GA.jar,\
                lib/javax.annotation-api-1.2.jar,\
-               lib/javax.inject-2.2.0.jar,\
-               lib/javax.ws.rs-api-2.0.jar,\
+               lib/javax.inject-2.4.0-b10.jar,\
+               lib/javax.ws.rs-api-2.0.1.jar,\
                lib/jaxb-api-2.1.jar,\
                lib/jaxb-impl-2.1.12.jar,\
-               lib/jersey-client-2.7.jar,\
-               lib/jersey-common-2.7.jar,\
-               lib/jersey-guava-2.7.jar,\
-               lib/jersey-media-multipart-2.7.jar,\
-               lib/jersey-server-2.7.jar,\
+               lib/jersey-client-2.17.jar,\
+               lib/jersey-common-2.17.jar,\
+               lib/jersey-guava-2.17.jar,\
+               lib/jersey-media-multipart-2.17.jar,\
                lib/log4j-over-slf4j-1.7.6.jar,\
                lib/mimepull-1.9.3.jar,\
                lib/osgi-resource-locator-1.0.1.jar,\
                lib/slf4j-api-1.7.6.jar,\
                lib/stax-api-1.0-2.jar,\
-               lib/validation-api-1.1.0.Final.jar
+               lib/joda-time-2.7.jar
 jars.compile.order = .
 
 
