--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.6</version>
         </dependency>
+       <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.7</version>
+        </dependency>
        
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
@@ -111,12 +116,12 @@
          <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
-            <version>2.7</version>
+            <version>2.17</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>2.7</version>
+            <version>2.17</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
